<resources>
    <string name="app_name">PETinder</string>
    <string name="hint_exemplo_email">example@example.com</string>
    <string name="text_login">Login</string>
    <string name="text_senha">Senha</string>
    <string name="text_entrar">Entrar</string>
    //Config da Navigation Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chat">Chat</string>
    //Config Servidor
    <string name="imageserver">http://4runnerapp.com.br/Petinder/img/</string>
    <string name="imageservermini">http://4runnerapp.com.br/Petinder/img_thumb/</string>
    <string name="email">E-mail:</string>
    <string name="datanasc">Data de nascimento</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirme a senha</string>
    <string name="nome">Nome</string>
    <string name="opserro">Ops! Algo deu errado!</string>
    <string name="bemvindo">Bem-vindo!</string>
    <string name="cadastrado">Cadastro concluído!</string>
    <string name="continuar">Continuar</string>
    <string name="atencao">Atenção!</string>
    <string name="emailjacadastrado">E-mail já cadastrado</string>
    <string name="okentendi">Ok, entendi</string>
    <string name="tirarfoto">Tirar foto</string>
    <string name="escolherdagaleria">Escolher da galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="escolhafoto">Escolha a foto</string>
    <string name="preenchacampo">Campo obrigatório</string>
    <string name="emailInvalido">E-mail inválido</string>
    <string name="senhacurta">Senha muito curta</string>
    <string name="senhasdiferentes">As senhas não são iguais</string>
    <string name="conexaoIndosponivel">A conexão não se encontra dísponivel no momento</string>
    <string name="dadosInvalidos">Os dados não são válidos, corrija e tente novamente</string>


    <string name="txt_femea">Fêmea</string>
    <string name="txt_idade">Idade</string>
    <string name="txt_macho">Macho</string>
    <string name="cadastrar">Cadastrar</string>

    <string name="prontinho">Prontinho!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="naohaconversas">Não há conversas para exibir.</string>
    <string name="editar">Editar</string>
    <string name="selecionePet">Selecione um Pet</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
